fix(rendering): Don't set a class on plaintext pre wrapping
Our HTML sanitizer that we run bodies through before rendering
strips off this class, so it's not currently working with the
class set. Since this CSS is specific to the email frame, should
be OK to have no class at all.

--- a/static/email-frame.less
+++ b/static/email-frame.less
@@ -99,7 +99,7 @@
     max-width: 100%;
   }
 
-  pre.nylas-plaintext {
+  pre {
     white-space: pre-wrap;
     word-wrap: break-word;
   }
